--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,7 @@
             Czy będziesz we Wrocławiu 31 października (poniedziałek)?
         </h1>
 
-        <form id="form" class="form" method="post">
+        <form id="form" class="form" method="post" action="/vote">
 
             <div class="form__container anim">
 
